# oscar2parquet

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  convert.rs  main.rs
