[package]
name = "oscar2parquet"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Ortiz Suarez <pedro@commoncrawl.org>"]
description = "Converts OSCAR's jsonl files into parquet."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
arrow = "52.1.0"
clap = { version = "4.5.9", features = ["derive"] }
parquet = "52.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
walkdir = "2.5.0"
